--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <div class="wrapper clearfix">
     <main class="main">
-      <h2 class="hidden">HOT TOPIC</h2>
+      <section class="hot-topic"></section>
       <a href="#" class="hot-topic clearfix">
         <img class="image" src="./images/hot-topic.jpg" alt="コーディング画面">
         <div class="content">
@@ -37,7 +37,9 @@
       <div class="hot-topic">
         <!-- HOT TOPICのコンテンツ内容が入ります -->
       </div>
-      <h2 class="heading">NEWS</h2>
+      <section class="news">
+        <h2>NEWS</h2>
+      </section>
       <ul class="scroll-list">
         <li class="scroll-item">
           <a href="#">
@@ -55,7 +57,7 @@
         </li>
         <!-- NEWSのコンテンツ内容が入ります -->
       </ul>
-      <h2 class="hidden">ARTICLES</h2>
+      <section class="articles"></section>
       <div class="clearfix">
         <a href="#" class="article-box">
         <h3 class="title">実務で使えるHTML/CSSモダンコーディングTIPS</h3>
